k8s/quiz-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quiz
spec:
  replicas: 2
  selector:
    matchLabels:
      app: quiz
  template:
    metadata:
      labels:
        app: quiz
    spec:
      containers:
        - name: quiz
          image: quiz-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
      restartPolicy: Always
