k8s/minikube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quiz-service
spec:
  selector:
    app: quiz
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
