k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quiz-postgres
  namespace: quiz-db
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    app: quiz-postgres
