k8s/production-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quiz-service
spec:
  selector:
    app: quiz
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
